完善一些代码内容。